gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail19890b.d
version https://git-lfs.github.com/spec/v1
oid sha256:708189eb0f053093214f5e35d2502bed6561e8960744d1c0651fc076cc85a46d
size 218
